Changed location signature